# Wawona

./: .clang-format  .clang-tidy  .envrc.template  .gitignore  BUILD.md  CHANGELOG.md  CLIENT_COMMANDS.md  CMakeLists.txt  COMPILER_CONFIGURATION.md  COMPLETE.md  COMPLETE_PROTOCOL_STATUS.md  COMPOSITOR_FIXES.md  COMPOSITOR_STATUS.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  KEYBOARD_DEBUG.md  KOSMICKRISP.md  LICENSE  MAKEFILE_GUIDE.md  MESA_LLVMPIPE_SETUP.md  Makefile  Makefile.test_client  PROTOCOL_COMPLIANCE.md  Progress.md  QUICK_START.md  README.md  RUNTIME_FIXES.md  TESTING.md  WESTON_METAL_FIXES.md  build.rs  com.aspauldingcode.wawona.compositor.plist  flake.nix  install-wayland.sh  install-waypipe.sh  macos_wlclient_test  notes.md  quad.vert.spv  result
dependencies/: android.nix  build.nix  common.nix  gradle-deps.nix  gradlegen-wawona.nix  init.gradle  inspect_clang.nix  ios.nix  macos.nix  registry.nix  wawona-android.nix  wawona-common.nix  wawona-ios.nix  wawona-macos.nix  wawona.nix  xcodegen-wawona.nix
docs/: 2026-ARCHITECTURE-STRUCTURE.md  2026-CHECKLIST.md  2026-CSD-WINDOW-INTEGRATION.md  2026-DMABUF_SUPPORT.md  2026-LOGGING.md  2026-Wawona-Android-Audit.md  2026-graphics.md  2026-waypipe.md  2026-xdg-decoration.md  ACTUAL_IMPLEMENTATION_STATUS.md  ARCHITECTURE_ANALYSIS.md  COLIMA_SETUP.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETION_STATUS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_PROTOCOL_PLAN.md  CONTAINER_TOOL_NOTES.md  DEPENDENCIES.md  EGL_PLATFORM_SUPPORT.md  FINAL_PROGRESS.md  FINAL_PROTOCOL_STATUS.md  FINAL_VERIFIED_STATUS.md  (+30 more)
(+486 files in other folders)
